<?xml version="1.0" encoding="utf-8"?>
<resources>

    // Application strings
    <string name="app_name">Cup O Joe</string>
    <string name="action_settings">Settings</string>

    // Form strings
    <string name="your_name">Name for Order</string>
    <string name="coffee_name">Name your coffee</string>
    <string name="single_shot">Single shot</string>
    <string name="double_shot">Double shot</string>
    <string name="cream">Cream</string>
    <string name="sugar">Sugar</string>
    <string name="num_sugar"># of sugars</string>
    <string name="place_order">Place Order</string>

    <string name="takes_cream">cream</string>
    <string name="takes_sugar">sugar</string>
    <string name="blank_text"></string>
</resources>
